2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `sys_stat'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `sys_stat'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `time'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `time'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdio'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdio'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdlib'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdlib'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `string'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `string'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `unistd'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `unistd'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `signal'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `signal'.

2010-04-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Include more info in "maybe desupported" warning.

	* configure.ac: For "maybe desupported" warning, also output the
	name and value of each var in `PRESUMABLY_STANDARD_ENOUGH_BY_NOW'.
	* README-alpha: Update instructions re this warning.

2010-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Remove some now-redundant configure.ac macro calls.

	* configure.ac (AC_PROG_INSTALL, AC_PROG_MAKE_SET): Delete.

2010-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move GCC attribute configuration into base.h.

	* configure.ac (RCS_CHECK_GCC_ATTRIBUTE): Delete AC_DEFUN.
	(noreturn, format): Delete these RCS_CHECK_GCC_ATTRIBUTE calls.

2010-04-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `extensions'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `extensions'.

2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `stdarg'.

	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdarg'.